# cenzo

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json
.claude/: launch.json
apps/api/: .env.example  Cargo.toml  Dockerfile
apps/api/migrations/: 0001_init.sql  0002_sensors.sql
apps/api/src/: auth.rs  cert.rs  config.rs  db.rs  error.rs  hashing.rs  main.rs  models.rs  nft_score.rs  roles.rs  routes.rs  sensors.rs  stellar.rs
apps/contracts/censo_trace/: Cargo.toml
apps/contracts/censo_trace/src/: lib.rs  test.rs
apps/web/: .env.example  auth.ts  package.json  pnpm-lock.yaml  railway.toml  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/dashboard/: layout.tsx  page.tsx
apps/web/app/styles/: base.css  censo.css  dashboard.css  motion.css  tokens.css  ui.css
apps/web/components/: freighter-connect.tsx
apps/web/components/dashboard/: actor-onboarding.tsx  app-sidebar.tsx  evidence-panel.tsx  incident-stage-chart.tsx  lab-shell.tsx  lote-actions.tsx  lote-create-form.tsx  lote-evaluation.tsx  (+19 more)
apps/web/lib/: censo-actions.ts  censo-api.ts  censo-server.ts  dashboard.test.ts  dashboard.ts  wallet.ts
docs/: API.md  CONTRACT.md  DATABASE.md  SETUP.md  TECHNICAL.md  WEB3.md
docs/superpowers/plans/: 2026-05-28-redesign.md  2026-06-04-graphs-command-room.md
docs/superpowers/specs/: 2026-05-28-redesign-design.md  2026-06-04-fase1-onchain-trazabilidad-design.md
skill-staging/stellar-nextjs-rust-auth/: SKILL.md
skill-staging/stellar-nextjs-rust-auth/references/: stellar-docs.md
(+26 files in other folders)
